--- a/WebContent/css/app.css
+++ b/WebContent/css/app.css
@@ -32,6 +32,7 @@ body.loading .loadingIndicator {
 .grid-dimension {
 	margin-left: auto;
 	margin-right: auto;
+	margin-bottom: 20px;
 	width: 198px;
 }
 
@@ -202,6 +203,10 @@ select:disabled {
 }
 
 /* style for navigation bar  */
+header {
+	margin-bottom: 20px;
+}
+
 .nav ul {
 	list-style: none;
 	background-color: #ccc;
