--- a/WebContent/css/app.css
+++ b/WebContent/css/app.css
@@ -25,9 +25,7 @@
 	left: 0;
 	height: 100%;
 	width: 100%;
-	background: rgba(255, 255, 255, .6)
-		url("http://localhost:8080/MyWebProjectStaticContent/images/ajax-loader.gif")
-		50% 50% no-repeat;
+	background: url("http://localhost:8080/MyWebProjectStaticContent/images/ajax-loader.gif") 50% 50% no-repeat;
 }
 
 body.loading {
